--- a/Weather and Pollution prediction2.ipynb
+++ b/Weather and Pollution prediction2.ipynb
@@ -35,16 +35,7 @@
    "id": "f171937e",
    "metadata": {},
    "source": [
-    "### Project Context\n",
-    "A company in the environmental consulting industry is seeking to analyze the air quality in a specific city during hot and cold weather, during high-wind conditions and during precipitation. They are interested in making recommendations to the government and businesses in the region on how to mitigate the impact of weather conditions on air quality.  \n",
-    "\n",
-    " \n",
-    "\n",
-    "As a Data Analyst, you are expected to analyze the data provided, seek insights and make recommendations to achieve the set objectives.\n",
-    "\n",
-    "Additionally, kindly use this dataset to analyze the historical impact of weather conditions on air quality, and make predictions on air quality during specific weather conditions. This information could be used to inform emergency response plans and prepare for potential air quality issues.\n",
-    "\n",
-    "[Link to the Challenge](https://techcommunity.microsoft.com/t5/educator-developer-blog/data-analysis-challenge-impact-of-weather-conditions-on-air/ba-p/3719570?WT.mc_id=academic-00000-ooyinbooke)"
+    "data analysis based on previous wether report"
    ]
   },
   {
@@ -196,10 +187,8 @@
    "metadata": {},
    "source": [
     "### Question: What can be observed about the PM2.5 Concentration with respect to time\n",
-    "\n",
-    "According to [Department of Health, New York](https://www.health.ny.gov/environmental/indoors/air/pmq_a.htm#:~:text=Fine%20particulate%20matter%20(PM2.5,hazy%20when%20levels%20are%20elevated.), Fine particulate matter (PM2.5) is an air pollutant that is a concern for people's health when levels in air are high. PM2.5 are tiny particles in the air that reduce visibility and cause the air to appear hazy when levels are elevated. \n",
-    "\n",
-    "From [Breeze Technologies](https://www.breeze-technologies.de/blog/what-is-an-air-quality-index-how-is-it-calculated/), The levels of PM2.5 have been grouped to determine the air quality status\n",
+    " \n",
+    " The levels of PM2.5 have been grouped to determine the air quality status\n",
     "\n",
     "- **Excellent (0 - 7)**: According to current research, negative impacts on ecosystems are unlikely.\n",
     "- **Fine (7 - 15)**: All values are under the legal health protection limits. Effects on ecosystems can no longer be ruled out\n",
@@ -1326,61 +1315,6 @@
    "metadata": {},
    "source": [
     "."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "890dc366",
-   "metadata": {},
-   "source": [
-    "## Conclusion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "953ef976",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "### Insights\n",
-    "\n",
-    "The main aim of this Analysis is to discover the impact of weather conditions on Air Quality. Air Quality in this dataset is determined by the level (Concentration in Ug/m3) of Particulate matter (PM2.5) in the atmosphere.\n",
-    "According to Breeze Technologies, PM2.5 levels over 55Ug/m3 shows a poor level of air quality and above 110Ug/m3 shows a severe level of air quality. For this analysis, a limit of 100Ug/m3 was placed to signify that the air quality is getting to a severe level. \n",
-    "\n",
-    "After Exploring the dataset and doing research on this case study, I discovered the following insights \n",
-    "\n",
-    "- On checking the Mean value of PM2.5 across all years, the mean value is 97.80Ug/m3 which is very close to the threshold. After checking for the average PM2.5 for each year; for 2010 the average is 101.63Ug/m3, for 2011 the average is 97.99Ug/m3, for 2012 the average is 89.93Ug/m3, 2013 the average is 101.60Ug/m3 and 2014 the average is 97.87Ug/m3. From this observation, the city's air quality is not at its best with average PM2.5 level in the poor level.\n",
-    "\n",
-    "- After checking the PM2.5 level for each Month and Season, It is observed that PM2.5 level is the highest during the Winter Season (December to February) having approximately 110Ug/m3 on average. The Average PM2.5 level during the Autumn season also surpassed the threshold having 101.58Ug/m3. The The average PM2.5 level during the spring season and summer season is 88.24Ug/m3 and 91.74Ug/m3. From this observation, it tells that the PM2.5 level is worse during the winter season then the autumn season. \n",
-    "\n",
-    "- After observing the relationship between the wind speed and the PM2.5 level. It is observed that the lower the wind speed the higher the PM2.5 level. \n",
-    "\n",
-    "- Higher levels of PM2.5 occurs more often when the wind direction is going towards the South West (SW) then the South East. It gets extremely high during the winter period when the wind direction is headed towards the South East and South West\n",
-    "\n",
-    "- There was no relationship or pattern observed between the temperature and the PM2.5 levels\n",
-    "\n",
-    "- There was a steady Pressure level of approximately 1 atm\n",
-    "\n",
-    "- On periods where there are a low hours of precipitation (rainfall), the PM2.5 levels are extremely high. When there are longer hours of rainfall, the PM2.5 levels are low in comparison to when there are longer amount of rainfall."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f28df9fc",
-   "metadata": {},
-   "source": [
-    "### Recommendations\n",
-    "\n",
-    "After gathering insights from the data, I would love to make a few recommendations\n",
-    "\n",
-    "- Since the city's average PM2.5 level is normally high, I strongly advise the government to check into United State's National Action Plan on Pollutant & Control, which intends to reduce PM 2.5 (respirable, pollution particles) concentrations by 20% to 30% above 2017 annual levels in more than 100 cities. By reducing reliance on coal, limiting car emissions, expanding the production of renewable energy sources, and strictly enforcing emissions regulations, the plan promised to achieve these objectives. \n",
-    "\n",
-    "- When the wind is blowing in the south-west and south-east directions, high levels of PM2.5 are seen. Tracking the sources of the pollutants and putting a stop to them will help lower the PM2.5 concentration.\n",
-    "\n",
-    "- The PM2.5 concentration was seen to rise quickly throughout the winter months. This may be due to the extensive use of coal and other fossil fuels in the production of heat. When possible, I advise replacing biomass fuels, such as wood, animal dung, and crop wastes, or coal, in homes that use them for cooking and heating with cleaner fuels, including biogas (methane), liquid petroleum gas (LPG), electricity, or solar cookers..\n",
-    "\n",
-    "- From the Analysis, A High Amount of hours of rain and snow shows a low level of PM2.5 levels. According to [Davis Instrument](https://www.davisinstruments.com/blogs/newsletter/meteorology-101-how-weather-affects-air-quality), Rain and Snow can wash particulate matter out of the air and destroy dissolvable pollutants.  While the pollutants are washed out or dispersed, they are not gone. They are just moved somewhere else. They end up in someone else’s lungs, or dropped into bodies of water for aquatic plants and animals to deal with. It is advised that citizens who are very sensitive health-wise should refrain from excessive outdoors activities so that they wouldnt get infected"
    ]
   }
  ],
